istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: skillfybank-mtls
  namespace: skillfybank
spec:
  mtls:
    mode: STRICT
